--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: CHILEHALAL
-Theme URI: https://chilehalal.cl
+Theme Name: GobStyleTheme
+Theme URI: 
 Author: Zumito
-Author URI: https://chilehalal.cl
-Description: Plantilla personalizada para ChileHalal.
-Version: 1.0
+Author URI: 
+Description: Plantilla personalizable.
+Version: 2.0
 */
