--- a/assets/css/modules/home-widgets.css
+++ b/assets/css/modules/home-widgets.css
@@ -4,7 +4,7 @@
  */
 
 .home-widgets-section {
-    padding: 50px 0;
+    padding: 0;
     background-color: var(--bg-white);
     border-top: 1px solid var(--border-color);
 }
