--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -128,7 +128,7 @@
     color: var(--bg-white);
     padding: 10px 15px;
     font-size: 13px;
-    font-weight: bold;
+    font-weight: 1;
     text-transform: uppercase;
     border: 1px solid transparent;
     text-decoration: none;
