--- a/assets/css/layout/page.css
+++ b/assets/css/layout/page.css
@@ -22,8 +22,8 @@
 }
 
 .page-title {
-    color: var(--nhla-blue);
-    font-size: 2.2rem;
+    color: var(--color-primary);
+    font-size: var(--font-size-title);
     margin: 0;
     text-transform: uppercase;
     font-weight: 700;
@@ -36,17 +36,14 @@
     line-height: 1.8;
 }
 
+.page-content h1,
 .page-content h2,
 .page-content h3,
 .page-content h4 {
-    color: var(--nhla-blue);
+    color: var(--color-primary);
     margin-top: 35px;
     margin-bottom: 15px;
-}
-
-.page-content h2 {
-    border-left: 4px solid var(--nhla-green);
-    padding-left: 15px;
+    text-transform: uppercase;
 }
 
 .page-content p {
@@ -60,6 +57,6 @@
 }
 
 .page-content a {
-    color: var(--nhla-green);
+    color: var(--color-secondary);
     font-weight: bold;
 }
