--- a/assets/css/modules/back-to-top.css
+++ b/assets/css/modules/back-to-top.css
@@ -5,7 +5,7 @@
     position: fixed;
     bottom: 25px;
     right: 25px;
-    background-color: var(--nhla-blue); /* Azul Oficial */
+    background-color: var(--color-primary); /* Azul Oficial */
     color: var(--bg-white);
     border: none;
     width: 45px;
@@ -22,6 +22,6 @@
 }
 
 #btnTop:hover {
-    background-color: var(--nhla-green); /* Verde al pasar el mouse */
+    background-color: var(--color-secondary); /* Verde al pasar el mouse */
     transform: translateY(-3px);
 }
