--- a/assets/css/modules/home-widgets.css
+++ b/assets/css/modules/home-widgets.css
@@ -23,7 +23,6 @@
     border-radius: 4px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     text-align: center;
 }
 
@@ -47,4 +46,10 @@
 .gob-widget.home-widget img {
     max-width: 100%;
     height: auto;
+}
+
+.wp-block-heading {
+    text-transform: uppercase;
+    color: var(--color-primary);
+    font-weight: 1;
 }
