--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: GobStyleTheme
-Theme URI: 
+Theme URI: https://github.com/chomusuke-png/theme-gob-wp
 Author: Zumito
-Author URI: 
+Author URI: https://github.com/chomusuke-png
 Description: Plantilla personalizable.
-Version: 1.7.7
+Version: 1.7.8
 */
